# GitTimePrism

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  项目目录结构.md
.trae/rules/: 代码开发规范.md
docs/: 项目目录结构.MD  项目规划文档.MD
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: askpass.rs  avatar.rs  lib.rs  main.rs  repo_manager.rs  state.rs
src-tauri/src/commands/: archive.rs  askpass.rs  avatar.rs  blame.rs  checkout.rs  cherry_pick.rs  commit_compare.rs  commit_details.rs  config.rs  conflict.rs  diff.rs  difftool.rs  drop_commit.rs  fetch.rs  file_content.rs  file_ops.rs  graph.rs  lfs.rs  merge.rs  mod.rs  purge.rs  rebase.rs  refs.rs  remote.rs  remote_mgmt.rs  repo.rs  repo_manager.rs  reset.rs  revert.rs  stage.rs  stash.rs  state.rs  submodule.rs  system.rs  tag.rs  tag_details.rs  terminal.rs  wallpaper.rs  watcher.rs
src-tauri/src/git/: archive.rs  blame.rs  branch.rs  checkout.rs  cherry_pick.rs  commands.rs  commit_compare.rs  commit_details.rs  config.rs  diff.rs  difftool.rs  drop_commit.rs  fetch.rs  file_content.rs  file_ops.rs  graph.rs  lfs.rs  log.rs  merge.rs  mod.rs  pull.rs  purge.rs  push.rs  rebase.rs  refs.rs  remote_mgmt.rs  repo.rs  reset.rs  revert.rs  set_config.rs  stage.rs  stash.rs  status.rs  submodule.rs  tag.rs  tag_details.rs
src-tauri/src/utils/: mod.rs  process.rs  watcher.rs
src/components/: app.ts  blame-viewer.ts  branch-list.ts  commit-detail.ts  commit-graph.ts  commit-input.ts  context-menu.ts  (+17 more)
(+30 files in other folders)
